# SignalDesk

./: .env.example  .gitignore  README.md  desktop_app.py  pyproject.toml  requirements.txt  run_agent.ps1  run_desktop.ps1
src/ai_research_agent/: __init__.py  __main__.py  config.py  desktop_ui.py  graph.py  llm.py  main.py  models.py  search.py  utils.py
tests/: test_utils.py
